src/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Care_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Team Member</label>
        <referenceTo>Care_Team_Member__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication</label>
        <referenceTo>Communication__c</referenceTo>
        <relationshipLabel>Child Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Name__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Communication</label>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>